--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>maven-plugin-api</artifactId>
             <version>3.8.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
